[package]
name = "simple-tilemap"
version = "0.4.0"
description = "A simple tilemap & tileset implementation."
authors = ["Solar-Falcon"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Solar-Falcon/simple-tilemap"
readme = "README.md"
keywords = ["tilemap", "tileset", "tile"]

[dependencies]
fast-srgb8 = "1"
rgb = "0.8"
simple-blit = ">=0.7.1"
serde = { version = "1", default_features = false, features = ["derive", "alloc"], optional = true }

[features]
default = []
serde = ["dep:serde", "rgb/serde", "simple-blit/serde"]
